--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -499,3 +499,7 @@ quota.text.section1 = Please, specify the limits of responses received for this 
 quota.title.section2 = Question-based quotas
 quota.text.section2 = You can use the responses to key question to define quotas for certain user profiles. For example, if you have a question on "Gender" and you have two options (female / male) you can define a minimum and maximum of female or male participants. These limits will be used to monitor your advances in the dissemination and completion of the survey.
 quotas.menu.general = Quotas datas 
+
+quota.result.surveys = surveys
+quota.result.max = max
+quota.result.min = min
