pagination and other things of the survey

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -75,6 +75,8 @@ button.hide_section=Hide section
 button.done=Done
 button.continue=Continue
 button.back=Back
+button.start=Start
+button.end=End
 
 button.aria_label.add_content=Add new content
 
@@ -539,3 +541,10 @@ quota.text.section1 = Please, specify the limits of responses received for this 
 quota.title.section2 = Question-based quotas
 quota.text.section2 = You can use the responses to key question to define quotas for certain user profiles. For example, if you have a question on "Gender" and you have two options (female / male) you can define a minimum and maximum of female or male participants. These limits will be used to monitor your advances in the dissemination and completion of the survey.
 
+#******************
+# Survey process
+#******************
+survey.process.pageInfo1=You are in page
+survey.process.pageInfo2=of
+survey.process.finishPage.title=Thank you for your colaboration.
+survey.process.finishPage.body=
