--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -76,6 +76,8 @@ button.hide_section=Ocultar sección
 button.done=Hecho
 button.continue=Continuar
 button.back=Volver
+button.start=Empezar
+button.end=Terminar
 
 button.aria_label.add_content=Añadir nuevo contenido
 
@@ -539,3 +541,11 @@ quota.title.section1 = Overall response quota
 quota.text.section1 = Please, specify the limits of responses received for this survey. You can set a minimum of responses expected, so dissemination efforts will continue until you reach this limit. You can also set a maximum, so the access to the survey will be disabled when you reach this number. These limits will also be used to monitor your advances in the dissemination and completion of the survey.
 quota.title.section2 = Question-based quotas
 quota.text.section2 = You can use the responses to key question to define quotas for certain user profiles. For example, if you have a question on "Gender" and you have two options (female / male) you can define a minimum and maximum of female or male participants. These limits will be used to monitor your advances in the dissemination and completion of the survey.
+
+#******************
+# Survey process
+#******************
+survey.process.pageInfo1=Estás en la página
+survey.process.pageInfo2=de
+survey.process.finishPage.title=Gracias por su colaboración.
+survey.process.finishPage.body=
