--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -546,5 +546,5 @@ quota.text.section2 = You can use the responses to key question to define quotas
 #******************
 survey.process.pageInfo1=You are in page
 survey.process.pageInfo2=of
-survey.process.finishPage.title=Thank you for your colaboration.
-survey.process.finishPage.body=
+survey.process.finishPage.title=Survey completed.
+survey.process.finishPage.body=Thank you for your collaboration. You can already close the page of your browser.
