--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -547,5 +547,5 @@ quota.text.section2 = You can use the responses to key question to define quotas
 #******************
 survey.process.pageInfo1=Estás en la página
 survey.process.pageInfo2=de
-survey.process.finishPage.title=Gracias por su colaboración.
-survey.process.finishPage.body=
+survey.process.finishPage.title=Encuesta completada.
+survey.process.finishPage.body=Muchas gracias por su colaboración, ya puede cerrar la página de su navegador.
