Solved problem in fiels of questions

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -36,6 +36,10 @@ msg.error.poll.project=Type a project name
 
 msg.error.poll.option=Type a option text
 
+msg.error.title.text=Type a title for the file
+msg.error.alttext.text=Type an alternative text for the file
+msg.error.desc.text=Type a description for the file
+
 #******************
 # Buttons
 #******************
