--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -37,6 +37,10 @@ msg.error.poll.project=Escriba un nombre de proyecto
 
 msg.error.poll.option=Escriba un texto de la opción
 
+msg.error.title.text=Escriba un título para el fichero
+msg.error.alttext.text=Escriba un texto alternativo para el fichero
+msg.error.desc.text=Escriba una descripción para el fichero
+
 #******************
 # Buttons
 #******************
