--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -39,6 +39,7 @@ msg.error.poll.option=Type a option text
 msg.error.title.text=Type a title for the file
 msg.error.alttext.text=Type an alternative text for the file
 msg.error.desc.text=Type a description for the file
+msg.error.url.text=Type the url of the video. It should start by "http://" or "https://"
 
 #******************
 # Buttons
@@ -382,6 +383,7 @@ file.edit.title=Edit multimedia information
 file.edit.image=Image
 file.edit.titleImagen=Title
 file.edit.altTextImage=Alternative text
+file.edit.descTextVideo=Video description
 file.edit.change=Change
 
 #Youtube Player
