--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -40,6 +40,7 @@ msg.error.poll.option=Escriba un texto de la opción
 msg.error.title.text=Escriba un título para el fichero
 msg.error.alttext.text=Escriba un texto alternativo para el fichero
 msg.error.desc.text=Escriba una descripción para el fichero
+msg.error.url.text=Escriba la url del vídeo. Debe empezar por "http://" o "https://"
 
 #******************
 # Buttons
