limit caracter messages

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -548,3 +548,5 @@ survey.process.pageInfo1=You are in page
 survey.process.pageInfo2=of
 survey.process.finishPage.title=Survey completed.
 survey.process.finishPage.body=Thank you for your collaboration. You can already close the page of your browser.
+survey.process.charCounter=characters.
+survey.process.charLimit=You have reached the limit of characters.
