--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -549,3 +549,5 @@ survey.process.pageInfo1=Estás en la página
 survey.process.pageInfo2=de
 survey.process.finishPage.title=Encuesta completada.
 survey.process.finishPage.body=Muchas gracias por su colaboración, ya puede cerrar la página de su navegador.
+survey.process.charCounter=caracteres.
+survey.process.charLimit=Ha alcanzado el limite de caracteres.
