mandatory question in survey

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -560,3 +560,5 @@ survey.process.finishPage.title=Survey completed.
 survey.process.finishPage.body=Thank you for your collaboration. You can already close the page of your browser.
 survey.process.charCounter=characters.
 survey.process.charLimit=You have reached the limit of characters.
+survey.question.label.mandatory=Mandatory question
+survey.question.error.mandatory=This question is mandatory.
