--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -560,3 +560,5 @@ survey.process.finishPage.title=Encuesta completada.
 survey.process.finishPage.body=Muchas gracias por su colaboración, ya puede cerrar la página de su navegador.
 survey.process.charCounter=caracteres.
 survey.process.charLimit=Ha alcanzado el limite de caracteres.
+survey.question.label.mandatory=pregunta obligatoria
+survey.question.error.mandatory=Esta preguna es obligatoria.
