--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -42,6 +42,9 @@ msg.error.alttext.text=Escriba un texto alternativo para el fichero
 msg.error.desc.text=Escriba una descripción para el fichero
 msg.error.url.text=Escriba la url del vídeo. Debe empezar por "http://" o "https://"
 
+msg.error.minmax1=El valor debe estar entre
+msg.error.minmax2=y
+
 #******************
 # Buttons
 #******************
