Control of decimals in shorttext

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -44,6 +44,8 @@ msg.error.url.text=Type the url of the video. It should start by "http://" or "h
 msg.error.minmax1=The value must be between
 msg.error.minmax2=and
 
+msg.error.inputNumber=Format number incorrect. Maximum number of decimals:
+
 #******************
 # Buttons
 #******************
