--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -45,6 +45,8 @@ msg.error.url.text=Escriba la url del vídeo. Debe empezar por "http://" o "https
 msg.error.minmax1=El valor debe estar entre
 msg.error.minmax2=y
 
+msg.error.inputNumber=Formato numérico incorrecto
+
 #******************
 # Buttons
 #******************
