error messages, index questions issues solved, images survey options

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -558,7 +558,18 @@ survey.process.pageInfo1=You are in page
 survey.process.pageInfo2=of
 survey.process.finishPage.title=Survey completed.
 survey.process.finishPage.body=Thank you for your collaboration. You can already close the page of your browser.
-survey.process.charCounter=characters.
-survey.process.charLimit=You have reached the limit of characters.
+survey.process.charCounter=CHARACTERS.
+survey.process.title.charLimit=CHARACTERS MAX.
+survey.process.desc.charLimit=You can not continue writing because it has reached the limit of characters.
 survey.question.label.mandatory=Mandatory question
-survey.question.error.mandatory=This question is mandatory.
+survey.question.error.mandatory=THIS QUESTION IS MANDATORY.
+survey.question.error.comment.mandatory=Please answer the question before to continue.
+survey.process.title.numFormat=Incorrect number format.
+survey.process.desc.numFormat1=The answer must be a number. 
+survey.process.desc.numFormat2=This number must have 
+survey.process.desc.numFormat3=decimals max.
+survey.process.decimalsMax=DECIMALS MAX.
+survey.process.title.numLimits=Number out of range.
+survey.process.desc.numLimits=The answer must be between
+survey.process.desc.numLimits.and=and
+survey.process.numLimits=Number between
