--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -558,7 +558,18 @@ survey.process.pageInfo1=Estás en la página
 survey.process.pageInfo2=de
 survey.process.finishPage.title=Encuesta completada.
 survey.process.finishPage.body=Muchas gracias por su colaboración, ya puede cerrar la página de su navegador.
-survey.process.charCounter=caracteres.
-survey.process.charLimit=Ha alcanzado el limite de caracteres.
+survey.process.charCounter=CARACTERES.
+survey.process.title.charLimit=CARACTERES MAX.
+survey.process.desc.charLimit=No podrá seguir escribiendo debido a que ha alcanzado el limite de caracteres. 
 survey.question.label.mandatory=pregunta obligatoria
-survey.question.error.mandatory=Esta preguna es obligatoria.
+survey.question.error.mandatory=ESTA PREGUNTA ES OBLIGATORIA
+survey.question.error.comment.mandatory=Por favor, responda la pregunta antes de continuar.
+survey.process.title.numFormat=Formato de número incorrecto.
+survey.process.desc.numFormat1=La respuesta debe ser un número. 
+survey.process.desc.numFormat2=Este número debe tener 
+survey.process.desc.numFormat3=decimales máximo.
+survey.process.title.numLimits=Número fuera de rango.
+survey.process.desc.numLimits=La respuesta debe estar entre
+survey.process.desc.numLimits.and=y
+survey.process.decimalsMax=DECIMALES MAX.
+survey.process.numLimits=Número entre
