foco accessibility and foco questions navigation, title option image as title in goto an dependences and session issues

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -578,3 +578,6 @@ survey.process.desc.numLimits=La respuesta debe estar entre
 survey.process.desc.numLimits.and=y
 survey.process.decimalsMax=DECIMALES MAX.
 survey.process.numLimits=Número entre
+survey.process.main.error.title=No es posible continuar con la encuesta debido a
+survey.process.main.error.desc.error=Existe respuestas erroneas. Por favor, responda correctamente para continuar.
+survey.process.main.error.desc.mandatory=Por favor, responda las preguntas obligatorias para continuar.
