--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -578,3 +578,6 @@ survey.process.title.numLimits=Number out of range.
 survey.process.desc.numLimits=The answer must be between
 survey.process.desc.numLimits.and=and
 survey.process.numLimits=Number between
+survey.process.main.error.title=Unable to continue due the following reasons
+survey.process.main.error.desc.error=There are errors in the answers. Please correct them before continuing.
+survey.process.main.error.desc.mandatory=Please answer the mandatory questions before conginuing.
