alert messages and questions buttons multilanguage

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -87,6 +87,8 @@ button.continue=Continue
 button.back=Back
 button.start=Start
 button.end=End
+button.question.next=Next question
+button.question.previous=Previous question
 
 button.aria_label.add_content=Add new content
 
