--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -88,6 +88,8 @@ button.continue=Continuar
 button.back=Volver
 button.start=Empezar
 button.end=Terminar
+button.question.next=Pregunta siguiente
+button.question.previous=Pregunta anterior
 
 button.aria_label.add_content=Añadir nuevo contenido
 
