solved issues first revision jrivero

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -178,7 +178,7 @@ survey_manager.table.content.none=none
 survey_manager.surveys.title=Online survey tool
 survey_manager.surveys.description=<p>Here you can create and share online surveys. Currently, surveys can include six different types of questions and responses: form fields, text paragraphs, multiple choice questions (checkboxes), simple choice questions (radiobuttons), matrixs and likert scales. Advanced options allow to define question logic and dependences.</p><p>Click on <strong>Create new</strong> to design your first survey!</p>
 survey_manager.surveys.table.caption=Surveys list
-survey_manager.surveys.table.column.deadline=*Deadline*
+survey_manager.surveys.table.column.deadline=Deadline
 survey_manager.surveys.table.column.survey=Survey
 survey_manager.surveys.table.column.progress=Fullfilment Progress
 survey_manager.surveys.table.column.num_responses=Answered surveys
@@ -193,7 +193,7 @@ survey_manager.surveys.notice=Important notice:
 survey_manager.polls.title=Online polling tool
 survey_manager.polls.description=<p>Here you can create and share online polls. Currently, online polls include the following features:</p><ul class="list-content"><li>Polls as simple choice questions (radiobuttons)</li><li>Current results are shown automatically after voting</li><li>An excel file with the current results can be downloaded from the admin panel</li><li>Polls can be personalized including an acknowledgement text and a link to direct users for further feedback (e.g. to product page)</li><li>Polls can be shared or embedded in webpages using HTML &lt;iframe&gt; code</li></ul><p>Click on <strong>Create new</strong> to design your first online poll!</p>
 survey_manager.polls.table.caption=Polls list
-survey_manager.polls.table.column.deadline=*Deadline*
+survey_manager.polls.table.column.deadline=Deadline
 survey_manager.polls.table.column.poll=Poll
 survey_manager.polls.table.column.url=Poll URL
 survey_manager.polls.table.column.actions=Actions
@@ -542,7 +542,7 @@ statistics.matrix.none=None
 #******************
 quota.add.new=Add new Quota
 quota.create.new=Create new cuota
-quota.select= Select quota
+quota.select= Select question
 quota.edit.title=Survey quotas
 quota.add.new=Add new quota
 quota.select.question=Select question
@@ -550,9 +550,9 @@ quota.add.warning.title = Warning
 quota.add.warning.text = There is a quota for that question.
 quota.add.warning.button = Accept
 quota.title.section1 = Overall response quota
-quota.text.section1 = Please, specify the limits of responses received for this survey. You can set a minimum of responses expected, so dissemination efforts will continue until you reach this limit. You can also set a maximum, so the access to the survey will be disabled when you reach this number. These limits will also be used to monitor your advances in the dissemination and completion of the survey.
+quota.text.section1 = You can specify the maximum number of responses to be received for this survey. When responses reach this number,  the survey is automatically disabled.
 quota.title.section2 = Question-based quotas
-quota.text.section2 = You can use the responses to key question to define quotas for certain user profiles. For example, if you have a question on "Gender" and you have two options (female / male) you can define a minimum and maximum of female or male participants. These limits will be used to monitor your advances in the dissemination and completion of the survey.
+quota.text.section2 = You can set the number of responses to a given option in a question. For example, if you have a question on "Gender" with two options (female / male),  you can define a minimum and maximum of female or male choices. The survey is active until the minimum limit is reached in all the options which limits are defined. When the maximum limit for an option is reached, the survey leads the user to the end of the survey when they choose that option. 
 quotas.menu.general = Quotas datas 
 quota.result.surveys = surveys
 quota.result.max = max
