--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -178,7 +178,7 @@ survey_manager.table.content.none=ninguno
 survey_manager.surveys.title=Herramienta de encuestas en línea
 survey_manager.surveys.description=<p>Aquí puede crear y compartir encuestas en línea. Actualmente, las encuestas pueden incluir seis tipos diferentes de preguntas y respuestas: preguntas de texto (cortas o largas), preguntas de elección múltiple (casillas de verificación), preguntas de opción simples (botones de radio), matrices y escalas. Existen además opciones avanzadas para definir dependencias entres pregunats y lógica.</p><p>Click en <strong>Crear nuevo</strong> para diseñar tu primera encuesta!</p>
 survey_manager.surveys.table.caption=Lista de encuestas
-survey_manager.surveys.table.column.deadline=*Fecha tope*
+survey_manager.surveys.table.column.deadline=Fecha tope
 survey_manager.surveys.table.column.survey=Encuesta
 survey_manager.surveys.table.column.progress=Llenado progreso
 survey_manager.surveys.table.column.num_responses=Encuestas respondidas
@@ -193,7 +193,7 @@ survey_manager.surveys.notice=Información importante:
 survey_manager.polls.title=Herramienta de sondeo en línea
 survey_manager.polls.description=<p>Aquí puede crear y compartir encuestas(polls) en línea. Actualmente, los polls incluyen las siguientes caracteristicas:</p><ul class="list-content"><li>Polls como una simple eleccion en una pregunta(radiobuttons)</li><li>Los resultados actuales se muestran automáticamente despues de votar</li><li>Desde el panel de administrador se puede descargar un excel con los resultados actuales</li><li>Las encuestas se pueden personalizar incluyendo un texto y un enlace para más de realimentación (por ejemplo a la página del producto)</li><li>Los polls se pueden compartir e incrustar en páginas web usándo código HTML &lt;iframe&gt;</li></ul><p>Click en <strong>Crear nuevo</strong> para diseñar tu primer poll!</p>
 survey_manager.polls.table.caption=Listado Polls
-survey_manager.polls.table.column.deadline=*Fecha tope*
+survey_manager.polls.table.column.deadline=Fecha tope
 survey_manager.polls.table.column.poll=Poll
 survey_manager.polls.table.column.url=Poll URL
 survey_manager.polls.table.column.actions=Acciones
@@ -542,17 +542,17 @@ statistics.matrix.none=Ninguna
 #******************
 quota.add.new=Añadir nueva cuota
 quota.create.new=Crear nueva cuota
-quota.select= Seleccionar cuota
+quota.select= Seleccionar pregunta
 quota.edit.title=Cuotas Encuesta
 quota.add.new=Añadir nueva cuota
 quota.select.question=Selecciona una pregunta
 quota.add.warning.title = Aviso
 quota.add.warning.text = Ya existe una cuota para esa pregunta.
 quota.add.warning.button = Aceptar
-quota.title.section1 = Overall response quota
-quota.text.section1 = Please, specify the limits of responses received for this survey. You can set a minimum of responses expected, so dissemination efforts will continue until you reach this limit. You can also set a maximum, so the access to the survey will be disabled when you reach this number. These limits will also be used to monitor your advances in the dissemination and completion of the survey.
-quota.title.section2 = Question-based quotas
-quota.text.section2 = You can use the responses to key question to define quotas for certain user profiles. For example, if you have a question on "Gender" and you have two options (female / male) you can define a minimum and maximum of female or male participants. These limits will be used to monitor your advances in the dissemination and completion of the survey.
+quota.title.section1 = Cuota global
+quota.text.section1 = Puede fijar el número máximo de respuestas que desea recibir en la encuesta. La encuesta se desactiva cuando se alcanza dicho número de respuestas.
+quota.title.section2 = Cuotas por pregunta
+quota.text.section2 = Puede fijar el número máximo de respuestas que desea recibir en una opción determinada de una pregunta. Por ejemplo, si tiene una pregunta sobre género con dos opciones (masculino / femenino), se puede fijar el número mínimo y máximo de respuestas que seleccionan masculino y femenino respectivamente.  La encuesta sigue activa hasta llegar al número mínimo de respuestas en todas las opciones cuyos límites se definan.  Cuando se alcanza el máximo en una de las opciones, la encuesta lleva al usuario al final si selecciona esa opción. 
 quotas.menu.general = Datos Cuotas
 quota.result.surveys = encuestas
 quota.result.max = max
