Edit poll finished and pre-select tab survey-poll

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -370,6 +370,7 @@ poll.preview.size.label.height=height
 poll.preview.size.label.pixels=pixels
 poll.preview.label.url=Poll url
 
+poll.edit.title=Edit Poll
 
 #******************
 # File
