--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -369,6 +369,8 @@ poll.preview.size.label.height=alto
 poll.preview.size.label.pixels=pixels
 poll.preview.label.url=URL del poll
 
+poll.edit.title=Editar Poll
+
 #******************
 # File
 #******************
