Accessibility review complete without pablo tasks

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -46,6 +46,9 @@ msg.error.minmax2=and
 
 msg.error.inputNumber=Format number incorrect. Maximum number of decimals:
 
+msg.error.error_in=Error in
+msg.error.mandatory=mandatory
+
 #******************
 # Buttons
 #******************
@@ -65,7 +68,7 @@ button.close=Close
 button.close.dependences=Close add dependences
 button.close.logic=Close add logic
 button.create=Create
-button.create_new=+ Create new
+button.create_new=Create new
 button.hide_question=Hide question
 button.import=Import
 button.remove_file=Remove file
@@ -119,6 +122,13 @@ register.exists.username=This username already exists in the system
 label.hidde=Hidde
 label.show=Show
 
+general.hide=Hide
+general.display=Display
+general.section=section
+general.page=page
+general.question=question
+general.survey_info=survey info
+
 #******************
 # Home
 #******************
@@ -171,6 +181,9 @@ question.chooseOne=Chose one option
 survey_manager.title=Survey Manager
 survey_manager.tab.surveys=Surveys
 survey_manager.tab.polls=Polls
+
+survey_manager.tab.surveys.descargar=Download excel with survey resposnes
+survey_manager.tab.polls.descargar=Download excel with poll resposnes
 
 survey_manager.table.content.none=none
 
@@ -453,7 +466,7 @@ accesibility.question.shorttextAnswer=Textarea to input your answer
 button.accesibility_help=Click to know the available editor shortcuts in the editable area below
 accesibility.window.title=Editor shortcuts
 accesibility.window.subtitle=Use the following shortcuts to change the format of text
-accesibility.window.info=<ul><li>Ctrl/Cmd+B for bold</li><li>Ctrl/Cmd+I for italic</li><li>Ctrl/Cmd+U to underline</li><li>Shift+Tab to reduce indent</li><li>Tab to increase indent</li><li>Ctrl/Cmd+L to align left</li><li>Ctrl/Cmd+E to center</li><li>Ctrl/Cmd+R to align right</li><li>Ctrl/Cmd+J to justify</li><li>Ctrl/Cmd+Z to undo</li><li>Ctrl/Cmd+Y to redo</li></ul>
+accesibility.window.info=<ul><li>Ctrl/Cmd+B for bold</li><li>Ctrl/Cmd+I for italic</li><li>Ctrl/Cmd+U to underline</li><li>Shift+Tab to reduce indent</li><li>Tab to increase indent</li><li>Ctrl/Cmd+L to align left</li><li>Ctrl/Cmd+E to center</li><li>Ctrl/Cmd+R to align right</li><li>Ctrl/Cmd+J to justify</li><li>Ctrl/Cmd+Z to undo</li><li>Ctrl/Cmd+Y to redo</li><li>Esc to exit to the multimedia files</li><li>Shift + Esc to exit to the buttons</li></ul>
 
 #******************
 # profile user
@@ -500,6 +513,8 @@ bcontent.add=Add
 bcontent.remove=Remove Hyperlink
 bcontent.undo=Undo (Ctrl/Cmd+Z)
 bcontent.redo=Redo (Ctrl/Cmd+Y)
+
+bcontent.exithelp=Press the Esc key or Shift + Esc keys to exit the editor.
 
 #******************
 # Types suveys
