--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -47,6 +47,9 @@ msg.error.minmax2=y
 
 msg.error.inputNumber=Formato numérico incorrecto
 
+msg.error.error_in=Error en la
+msg.error.mandatory=obligatoria
+
 #******************
 # Buttons
 #******************
@@ -66,7 +69,7 @@ button.close=Cerrar
 button.close.dependences=Cerrar añadir dependencias
 button.close.logic=Cerrar añadir lógica
 button.create=Crear
-button.create_new=+ Crear nuevo
+button.create_new=Crear nuevo
 button.hide_question=Ocultar pregunta
 button.import=Importar
 button.remove_file=Borrar fichero
@@ -118,6 +121,13 @@ register.exists.email=Este correo electronico ya existe en el sistema
 register.exists.username=Este nombre de usuario ya existe en el sistema
 label.hidde=Ocultar
 label.show=Mostrar
+
+general.hide=Ocultar
+general.display=Mostrar
+general.section=sección
+general.page=página
+general.question=pregunta
+general.survey_info=información de encuesta
 
 #******************
 # Home
@@ -171,6 +181,8 @@ question.chooseOne=Elige una opción
 survey_manager.title=Gestión Encuesta
 survey_manager.tab.surveys=Encuestas
 survey_manager.tab.polls=Polls
+survey_manager.tab.surveys.descargar=Descargar excel con las respuestas de la encuesta
+survey_manager.tab.polls.descargar=Descargar excel con las respuestas del poll
 
 survey_manager.table.content.none=ninguno
 
@@ -453,7 +465,7 @@ accesibility.question.shorttextAnswer=Textarea para introducir tu respuesta
 button.accesibility_help=Haz click para conocer los atajos de teclado disponibles en el editor de texto de debajo
 accesibility.window.title=Atajos de teclado para el editor
 accesibility.window.subtitle=Usa los siguienets atajos de teclado para cambair el formato del texto
-accesibility.window.info=<ul><li>Ctrl/Cmd+B para poner en negrita</li><li>Ctrl/Cmd+I para poner en cursiva</li><li>Ctrl/Cmd+U para subrayar</li><li>Shift+Tab para reducir la sangría</li><li>Tab para incrementar la sangría</li><li>Ctrl/Cmd+L para alinear a la izquierda</li><li>Ctrl/Cmd+E para centrar</li><li>Ctrl/Cmd+R para alinear a la derecha</li><li>Ctrl/Cmd+J para justificar el texto</li><li>Ctrl/Cmd+Z para deshacer</li><li>Ctrl/Cmd+Y para rehacer</li></ul>
+accesibility.window.info=<ul><li>Ctrl/Cmd+B para poner en negrita</li><li>Ctrl/Cmd+I para poner en cursiva</li><li>Ctrl/Cmd+U para subrayar</li><li>Shift+Tab para reducir la sangría</li><li>Tab para incrementar la sangría</li><li>Ctrl/Cmd+L para alinear a la izquierda</li><li>Ctrl/Cmd+E para centrar</li><li>Ctrl/Cmd+R para alinear a la derecha</li><li>Ctrl/Cmd+J para justificar el texto</li><li>Ctrl/Cmd+Z para deshacer</li><li>Ctrl/Cmd+Y para rehacer</li><li>Esc salir y acceder a los archivos multimedia</li><li>Shift + Esc para salir y acceder a los botones</li></ul>
 
 #******************
 # profile user
@@ -501,6 +513,8 @@ bcontent.add=Añadir
 bcontent.remove=Quitar hipervínculo
 bcontent.undo=Deshacer (Ctrl/Cmd+Z)
 bcontent.redo=Rehacer (Ctrl/Cmd+Y)
+
+bcontent.exithelp=Pulsa la tecla "Esc" o "Shift + Esc" para salir del editor.
 
 #******************
 # Types suveys
