change question position finish

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -92,7 +92,8 @@ button.start=Start
 button.end=End
 button.question.next=Next question
 button.question.previous=Previous question
-
+button.question.move.up=Move to the previous position the question
+button.question.move.down=Move to the next position the question 
 button.aria_label.add_content=Add new content
 
 #******************
