--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -93,7 +93,8 @@ button.start=Empezar
 button.end=Terminar
 button.question.next=Pregunta siguiente
 button.question.previous=Pregunta anterior
-
+button.question.move.up=Mover a la posición anterior la pregunta
+button.question.move.down=Mover a la posición siguiente la pregunta
 button.aria_label.add_content=Añadir nuevo contenido
 
 #******************
