--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -57,6 +57,7 @@ button.accept=Accept
 button.add_content.question=Question
 button.add_content.body=Body content
 button.add_content.page_break=page-break
+button.add_content.section_break=section-break
 button.add_file=Add new file
 button.add_option=Add option
 button.add_row=Add row
@@ -95,6 +96,7 @@ button.question.previous=Previous question
 button.question.move.up=Move to the previous position the question
 button.question.move.down=Move to the next position the question 
 button.aria_label.add_content=Add new content
+button.section.new=Add new section
 
 #******************
 # Language Select options
