--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -58,6 +58,7 @@ button.accept=Aceptar
 button.add_content.question=Pregunta
 button.add_content.body=Contenido del cuerpo
 button.add_content.page_break=salto de página
+button.add_content.section_break=salto de sección
 button.add_file=Agregar fichero
 button.add_option=Agregar opción
 button.add_row=Añadir fila
@@ -96,6 +97,7 @@ button.question.previous=Pregunta anterior
 button.question.move.up=Mover a la posición anterior la pregunta
 button.question.move.down=Mover a la posición siguiente la pregunta
 button.aria_label.add_content=Añadir nuevo contenido
+button.section.new=Añadir nueva sección
 
 #******************
 # Language Select options
