solved conginuing and error msg focus

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -601,4 +601,4 @@ survey.process.desc.numLimits.and=and
 survey.process.numLimits=Number between
 survey.process.main.error.title=Unable to continue due the following reasons
 survey.process.main.error.desc.error=There are errors in the answers. Please correct them before continuing.
-survey.process.main.error.desc.mandatory=Please answer the mandatory questions before conginuing.
+survey.process.main.error.desc.mandatory=Please answer the mandatory questions before continuing.
