Manu revision solved

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -334,6 +334,7 @@ survey.new.placeholder.project=Insert project name_
 survey.new.default.language = Default language
 
 survey.edit.tab.go_edit=Go to edit survey
+survey.edit.tab.go_quota=Go to survey quotas
 survey.edit.title=Edit Survey
 survey.statistic.title=Survey Statistics
 survey.edit.tab.go_statistics=Go to survey statistics
@@ -374,7 +375,12 @@ poll.new.placeholder.call=Type here_ (e.g. If you want to participate in other s
 poll.new.placeholder.link_label=Type here_ (e.g. Go to register form)
 poll.new.placeholder.link_url=Type here_ (e.g. http://www.surveytool.com)
 
+poll.edit.tab.go_edit=Go to edit poll
+poll.edit.tab.go_share=Go to share poll
+poll.edit.tab.go_statistics=Go to poll statistics
+
 poll.preview.title=Poll Preview
+poll.preview.notice=The data from the graph of results from this preview were taken at random.
 poll.preview.iframe.title=widget poll survey
 poll.preview.section.preview=Preview
 poll.preview.section.insert=Insert
