--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -331,7 +331,8 @@ survey.new.label.short_description=descripción corta (Opcional)
 survey.new.placeholder.project=Insertar nombre proyecto_
 survey.new.default.language = Lenguaje por defecto
 
-survey.edit.tab.go_edit=Ir a la edición de encuestas
+survey.edit.tab.go_edit=Ir a la edición de la encuesta
+survey.edit.tab.go_quota=Ir a las cuotas de la encuesta
 survey.edit.title=Editar Encuesta
 survey.statistic.title=Estadísticas de Encuesta
 survey.edit.tab.go_statistics=Ir a la estadística de la encuesta
@@ -372,7 +373,12 @@ poll.new.placeholder.call=Escriba aquí_ (Por ej. Si desea participar en otras en
 poll.new.placeholder.link_label=Escriba aquí_ (Por ej. Ir a registrar el formato)
 poll.new.placeholder.link_url=Escriba aquí_ (Por ej. http://www.surveytool.com)
 
+poll.edit.tab.go_edit=Ir a la edición del poll
+poll.edit.tab.go_share=Ir a compartir poll
+poll.edit.tab.go_statistics=Ir a la estadística del poll
+
 poll.preview.title=Previsualización del poll
+poll.preview.notice=Los datos de la gráfica de resultados de este preview han sido tomados al azar.
 poll.preview.iframe.title=widget poll encuesta
 poll.preview.section.preview=Previsualización
 poll.preview.section.insert=Insertar
