new dependences and goto finished

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -62,12 +62,12 @@ button.add_file=Add new file
 button.add_option=Add option
 button.add_row=Add row
 button.add_column=Add column
-button.add_dependence=Add dependence
+button.add_dependence=Add rule
 button.add_logic=Set logic
 button.cancel=Cancel
 button.close=Close
-button.close.dependences=Close add dependences
-button.close.logic=Close add logic
+button.close.dependences=Close dependences
+button.close.logic=Close logic
 button.create=Create
 button.create_new=Create new
 button.hide_question=Hide question
@@ -97,6 +97,8 @@ button.question.move.up=Move to the previous position the question
 button.question.move.down=Move to the next position the question 
 button.aria_label.add_content=Add new content
 button.section.new=Add new section
+button.logic=Logic
+button.dependences=dependences
 
 #******************
 # Language Select options
