--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -63,12 +63,12 @@ button.add_file=Agregar fichero
 button.add_option=Agregar opción
 button.add_row=Añadir fila
 button.add_column=Añadir columna
-button.add_dependence=Añadir dependencia
+button.add_dependence=Añadir regla
 button.add_logic=Añadir lógica
 button.cancel=Cancelar
 button.close=Cerrar
-button.close.dependences=Cerrar añadir dependencias
-button.close.logic=Cerrar añadir lógica
+button.close.dependences=Cerrar dependencias
+button.close.logic=Cerrar lógica
 button.create=Crear
 button.create_new=Crear nuevo
 button.hide_question=Ocultar pregunta
@@ -98,6 +98,8 @@ button.question.move.up=Mover a la posición anterior la pregunta
 button.question.move.down=Mover a la posición siguiente la pregunta
 button.aria_label.add_content=Añadir nuevo contenido
 button.section.new=Añadir nueva sección
+button.logic=Lógica
+button.dependences=Dependencias
 
 #******************
 # Language Select options
