Set survey states (Active, paused and fihished) and filter the table with it

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -186,17 +186,31 @@ question.chooseOne=Chose one option
 survey_manager.title=Survey Manager
 survey_manager.tab.surveys=Surveys
 survey_manager.tab.polls=Polls
-
-survey_manager.tab.surveys.descargar=Download excel with survey resposnes
+survey_manager.tab.surveys.label.download=download
+survey_manager.tab.surveys.label.pause=pause
+survey_manager.tab.surveys.label.activate=activate
+survey_manager.tab.surveys.label.finish=finish
+survey_manager.tab.surveys.label.statistics=statistics
+survey_manager.tab.surveys.download=Download excel with survey resposnes
+survey_manager.tab.surveys.pause=Pause survey
+survey_manager.tab.surveys.activate=Activate survey
+survey_manager.tab.surveys.finish=Finish survey
 survey_manager.tab.polls.descargar=Download excel with poll resposnes
-
+survey_manager.tab.surveys.state.active=Active
+survey_manager.tab.surveys.state.paused=Paused
+survey_manager.tab.surveys.state.finished=Finished
 survey_manager.table.content.none=none
+survey_manager.tab.surveys.filter.legend=Table filters
+survey_manager.tab.surveys.search.label=Search
+survey_manager.tab.surveys.state.filter.label=Select state
+survey_manager.tab.surveys.state.filter.option=All states
 
 #Surveys
 survey_manager.surveys.title=Online survey tool
 survey_manager.surveys.description=<p>Here you can create and share online surveys. Currently, surveys can include six different types of questions and responses: form fields, text paragraphs, multiple choice questions (checkboxes), simple choice questions (radiobuttons), matrixs and likert scales. Advanced options allow to define question logic and dependences.</p><p>Click on <strong>Create new</strong> to design your first survey!</p>
 survey_manager.surveys.table.caption=Surveys list
 survey_manager.surveys.table.column.deadline=Deadline
+survey_manager.surveys.table.column.state=State
 survey_manager.surveys.table.column.survey=Survey
 survey_manager.surveys.table.column.progress=Fullfilment Progress
 survey_manager.surveys.table.column.num_responses=Answered surveys
