--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -186,8 +186,23 @@ question.chooseOne=Elige una opción
 survey_manager.title=Gestión Encuesta
 survey_manager.tab.surveys=Encuestas
 survey_manager.tab.polls=Polls
-survey_manager.tab.surveys.descargar=Descargar excel con las respuestas de la encuesta
+survey_manager.tab.surveys.label.download=descargar
+survey_manager.tab.surveys.label.pause=pausar
+survey_manager.tab.surveys.label.activate=activar
+survey_manager.tab.surveys.label.finish=finalizar
+survey_manager.tab.surveys.label.statistics=estadisticas
+survey_manager.tab.surveys.download=Descargar excel con las respuestas de la encuesta
+survey_manager.tab.surveys.pause=Pausar encuesta
+survey_manager.tab.surveys.activate=Activar encuesta
+survey_manager.tab.surveys.finish=Finalizar encuesta
 survey_manager.tab.polls.descargar=Descargar excel con las respuestas del poll
+survey_manager.tab.surveys.state.active=Activa
+survey_manager.tab.surveys.state.paused=Pausada
+survey_manager.tab.surveys.state.finished=Finalizada
+survey_manager.tab.surveys.filter.legend=Filtros para la tabla
+survey_manager.tab.surveys.search.label=Buscar
+survey_manager.tab.surveys.state.filter.label=Seleccionar estado
+survey_manager.tab.surveys.state.filter.option=Todos los estados
 
 survey_manager.table.content.none=ninguno
 
@@ -196,6 +211,7 @@ survey_manager.surveys.title=Herramienta de encuestas en línea
 survey_manager.surveys.description=<p>Aquí puede crear y compartir encuestas en línea. Actualmente, las encuestas pueden incluir seis tipos diferentes de preguntas y respuestas: preguntas de texto (cortas o largas), preguntas de elección múltiple (casillas de verificación), preguntas de opción simples (botones de radio), matrices y escalas. Existen además opciones avanzadas para definir dependencias entres pregunats y lógica.</p><p>Click en <strong>Crear nuevo</strong> para diseñar tu primera encuesta!</p>
 survey_manager.surveys.table.caption=Lista de encuestas
 survey_manager.surveys.table.column.deadline=Fecha tope
+survey_manager.surveys.table.column.state=Estado
 survey_manager.surveys.table.column.survey=Encuesta
 survey_manager.surveys.table.column.progress=Llenado progreso
 survey_manager.surveys.table.column.num_responses=Encuestas respondidas
